@@ -19,7 +19,13 @@
 #OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 #THE SOFTWARE.
 
-DECK = 108
+SHAPES=3
+COLORS=4
+NUMBER=3
+SHADES=3
+DECKSIZE = SHAPES*COLORS*NUMBER*SHADES
+DEAL=12
+EXTRAS=3
 SELECTMASK = -1
 PLAYMASK = -2
 MATCHMASK = -3
