@@ -1,3 +1,8 @@
+9
+
+* added glue for launching outside of Sugar
+* save "low score" to Journal
+
 8
 
 * fixed bug in new game labels
